src/styles/search_results_container/search_result/_base.scss
.search-result {
  margin-bottom: 15px;
  display: flex;

  .search-result-thumbnail{
    width: 80px;
    height: 80px;
    border: 1px solid #979797;
    border-radius: 5px;
    margin-right: 17px;
  }

  .search-result-details{
    display: flex;
    flex-direction: column;
  }

  .search-result-title{
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;

    font-family: HelveticaNeue, Helvetica, Arial, "Lucida Grande", sans-serif;
    font-size: 16px;

    margin-bottom: 8px;
  }

  .search-result-star-count{
    font-family: OpenSans-SemiBold, Helvetica, Arial, "Lucida Grande", sans-serif;
    font-size: 14px;
    color: #FFAB66;
    margin-right: 5px;
  }

  .search-result-stars{
    margin-right: 11px;

    .search-result-star{
      display: inline-block;
      height: 15px;
      width: 15px;
      background-size: contain;
      background-image: url('../resources/graphics/star-empty.png');

      &.is-filled{
        background-image: url('../resources/graphics/stars-plain.png')
      }
    }
  }

  .search-result-ratings{
    color: #707070;
    font-size: 14px;
  }

  .search-result-extra-details{
    color: #707070;
    font-size: 14px;
  }

  &:last-of-type{
    margin-bottom: 0;
  }
}

